hphp/hack/test/typecheck/set_keybound.php
<?hh

<<__EntryPoint>>
function f() : void {
  $s = Set {};
  $s->add(null);
}
